Fix comment spacing

--- a/public/assets/styles/mixins/components.less
+++ b/public/assets/styles/mixins/components.less
@@ -79,12 +79,6 @@
   width: 100%;
   transition: background-color .3s;
 
-  // Comments.
-  .list-item__comment {
-    display: block;
-    margin-bottom: 4px;
-  }
-
   .list-item__detail {
     color: @primary-6;
     font-size: 13px;
@@ -289,6 +283,12 @@
     p.message {
       font-style: italic;
       font-weight: @font-weight-light;
+    }
+
+    // Comments.
+    &.list-item__comment {
+      display: block;
+      margin-bottom: 4px;
     }
   }
 
